--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:label="stock_managament_app"
+        android:label="Stock Managament App"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
