--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,17 +13,13 @@ dependencies:
   cloud_firestore:
   flutter_iconly:
   flutter_screenutil:
+  pull_to_refresh: ^2.0.0
   get_storage:
   image_picker:
-  http: any
-  pull_to_refresh:
-  restart_app:
-  share_plus: any
-  photo_view:
   cached_network_image: ^3.3.1
-  firebase_core_platform_interface:
+  firebase_pagination: ^3.1.0
   firebase_storage:
-  multi_select_flutter: ^4.1.3
+  firebase_ui_firestore: ^1.6.2
   path:
   flutter:
     sdk: flutter
