--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,12 @@ dependencies:
   cloud_firestore:
   flutter_iconly:
   flutter_screenutil:
-  pull_to_refresh: ^2.0.0
+  # pull_to_refresh: ^2.0.0
+  lottie: ^3.1.0
   get_storage:
   image_picker:
   cached_network_image: ^3.3.1
-  firebase_pagination: ^3.1.0
+  # firebase_pagination: ^3.1.0
   firebase_storage:
   firebase_ui_firestore: ^1.6.2
   path:
