--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   cloud_firestore:
   flutter_iconly:
   flutter_screenutil:
-  # pull_to_refresh: ^2.0.0
+  pull_to_refresh: ^2.0.0
   lottie: ^3.1.0
   get_storage:
   image_picker:
