--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,9 @@
         {
             "name": "stock_managament_app",
             "request": "launch",
-            "type": "dart"
+            "type": "dart",
+            "flutterMode": "debug"
+
         },
         {
             "name": "stock_managament_app (profile mode)",
