--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,9 +18,8 @@ dependencies:
   get_storage:
   image_picker:
   cached_network_image: ^3.3.1
-  # firebase_pagination: ^3.1.0
   firebase_storage:
-  firebase_ui_firestore: ^1.6.2
+  restart_app:
   path:
   flutter:
     sdk: flutter
