--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   cached_network_image: ^3.3.1
   firebase_storage:
   restart_app:
+  # image_picker_web: ^3.1.1
   path:
   flutter:
     sdk: flutter
