--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,8 +18,11 @@ dependencies:
   get_storage:
   image_picker:
   cached_network_image: ^3.3.1
+  firebase_pagination: ^3.1.0
   firebase_storage:
   restart_app:
+  background_sms: ^0.0.4
+  permission_handler: ^11.3.1
   # image_picker_web: ^3.1.1
   path:
   flutter:
