--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   lottie: ^3.1.0
   image_picker:
   cached_network_image: ^3.3.1
+  connectivity_plus: ^3.0.3
    
   # Utils
   flutter_iconly: 
