--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     <uses-permission android:name="android.permission.SEND_SMS"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <application
-        android:label="Kümüş"
+        android:label="TOUS"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
