--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,12 +6,6 @@ environment:
   sdk: ">=3.3.0 <4.0.0"
 
 dependencies:
-
-  # firebase
-  firebase_core: 
-  cloud_firestore:
-  firebase_pagination: ^3.1.0
-  firebase_storage:
    
   # Core
   get:
@@ -29,6 +23,7 @@ dependencies:
   # Utils
   flutter_iconly: 
   kartal: ^4.1.0
+  intl: ^0.19.0  
   cupertino_icons: 
   flutter_screenutil:
 
