--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   lottie: ^3.1.0
   image_picker:
   cached_network_image: ^3.3.1
+  change_app_package_name: ^1.5.0
   connectivity_plus: ^3.0.3
    
   # Utils
