--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,31 +1,51 @@
-plugins {
-    id 'com.google.gms.google-services' version '4.4.0' apply false
+buildscript {
+    ext.kotlin_version = '1.9.20' // Define Kotlin version
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        // Use the Google Services plugin compatible with modern AGP
+        classpath 'com.google.gms:google-services:4.4.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
 }
+
 allprojects {
     repositories {
         google()
         mavenCentral()
     }
 }
+// IN android/build.gradle
 
+// This block fixes old packages that don't have a namespace
+subprojects {
+    afterEvaluate { project ->
+        if (project.name == 'background_sms') {
+            project.android {
+                namespace 'com.j.background_sms'
+                compileSdkVersion 34
+            }
+        }
+        // =================== ADD THIS PART ===================
+        if (project.name == 'connectivity_plus') {
+            project.android {
+                namespace 'dev.fluttercommunity.plus.connectivity'
+                compileSdkVersion 34
+            }
+        }
+        // ======================================================
+    }
+}
 rootProject.buildDir = '../build'
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
 }
-
-// add These lines from here. in android/build.gradle  (NOT android/app/build.gradle)
-subprojects {
-    afterEvaluate { project ->
-        if (project.plugins.hasPlugin("com.android.application") ||
-                project.plugins.hasPlugin("com.android.library")) {
-            project.android {
-                compileSdkVersion 34
-                buildToolsVersion "34.0.0"
-            }
-        }
-    }
-}
-// to here
 subprojects {
     project.evaluationDependsOn(':app')
+}
+
+tasks.register("clean", Delete) {
+    delete rootProject.buildDir
 }
