--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -19,8 +19,10 @@ pluginManagement {
 
 plugins {
     id "dev.flutter.flutter-plugin-loader" version "1.0.0"
-    id "com.android.application" version "7.3.0" apply false
-    id "org.jetbrains.kotlin.android" version "1.9.0" apply false
+    // Update the Android Gradle Plugin version to be compatible with Gradle 8.4
+    id "com.android.application" version "8.3.2" apply false
+    // Update the Kotlin version
+    id "org.jetbrains.kotlin.android" version "1.9.20" apply false
 }
 
 include ":app"
